Add an SSDT to disable the GT 730

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -22,6 +22,14 @@
 				<key>Path</key>
 				<string>SSDT-PR.aml</string>
 			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Disables the GT 730 GPU</string>
+				<key>Enabled</key>
+				<false/>
+				<key>Path</key>
+				<string>SSDT-GPU-DISABLE.aml</string>
+			</dict>
 		</array>
 		<key>Delete</key>
 		<array>
